# oonta

./: .gitignore  .rustfmt.ignore  Cargo.toml  LICENSE  README.md  TODO.md  build.rs
.github/workflows/: CI.yml
benchmark/: .gitignore  benchmark.ml  benchmark.py  insertion_sort.ml
example/: dune-project
gg/: oonta.gg
llvm-ir/: .gitignore  Makefile  main.c  test.ll
ocaml/: .gitignore  arithmetic.ml  main.ml  merge_sort.ml  test.ml
src/: application_visitor.rs  ast.rs  ast_builder.rs  cmd.rs  custom_types.rs  driver.rs  ir_builder.rs  lib.rs  main.rs  terminal_colors.rs  typ.rs
src/ast/: ast_printer.rs
src/ir_builder/: ir.rs
